# python-binding

./: .gitignore  LICENSE  README.md  analysis.ipynb  build.sh  main.py  run.sh  test_binding.py
.devcontainer/: devcontainer.json  docker-compose.yaml
docker/: Dockerfile  build.sh  docker-compose.yaml  requirements.txt
python_binding_cpp/src/: argrelmax.cpp
python_binding_nb/: CMakeLists.txt
python_binding_nb/src/: argrelmax.cpp
python_binding_pb/: build.sh
python_binding_pb/src/: argrelmax.cpp
python_binding_pyo3/: Cargo.toml  build.sh  pyproject.toml
python_binding_pyo3/src/: lib.rs
python_binding_rust/: Cargo.toml  build.sh  pyproject.toml
python_binding_rust/src/: lib.rs
