[package]
name = "python_binding_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_binding_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
numpy = { git = "https://github.com/termoshtt/rust-numpy" }
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
